# ballista

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
pyballista/: client.py
