[project]
name = "pyballista"
version = "0.1.0"
description = "Modern Python gRPC client for Apache Ballista"
authors = [
  { name = "Ruffin Galactic", email = "dev@ruffingalactic.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "grpcio",
  "grpcio-tools",
  "pyarrow"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyballista", "pyballista.proto"]

[tool.hatch.build]
include = ["pyballista/**/*.py"]
